Fix Gin Input size overflow

--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -108,6 +108,7 @@
     }
 
     .form-element {
+      width: 100%;
       padding: 1rem;
     }
 
